#195: Add word-wrapping for buttons to fix the problem with "Continue without updating" button (#218)

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -917,7 +917,7 @@ progress[value]::-webkit-progress-value {
   border: none;
   border-radius: 30px;
   padding: 14px 30px;
-  white-space: nowrap;
+  white-space: normal;
   cursor: pointer;
   text-align: center;
   text-decoration: none;
